Fixing a small bug in deletion of overlapping selected text.

--- a/time-writer-react/components/document/_.css
+++ b/time-writer-react/components/document/_.css
@@ -42,6 +42,8 @@
 	border-right: 1px solid #1f1f1f;
 	text-align: right;
 	padding: 5px;
+	pointer-events: none;
+	user-select: none;
 }
 
 .document .document-content {
